@@ -8,28 +8,30 @@ import java.util.stream.Collectors;
 public record SingleArticleResponse(
         Long id,
         String createdBy,
+        String category,
         String title,
         String content,
         int liked,
         int saw,
-        long commentCounts,
-        List<SingleCommentResponse> comments
+        long commentCounts
+//        List<SingleCommentResponse> comments
 ) {
     public static SingleArticleResponse from(Article article) {
         article.reflectArticleSaw();
         List<SingleCommentResponse> commentResponses = article.getComments()
                 .stream()
                 .map(SingleCommentResponse::from)
-                .collect(Collectors.toList());
+                .toList();
         return new SingleArticleResponse(
                 article.getId(),
                 article.getCreatedBy(),
+                article.getCategory().getName(),
                 article.getTitle(),
                 article.getContent(),
                 article.getLiked(),
                 article.getSaw(),
-                commentResponses.size(),
-                commentResponses
+                commentResponses.size()
+//                commentResponses
         );
     }
 
